--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Chika-Md",
+  "name": "Satria-Md",
   "version": "1.2.3",
   "description": "WhatsApp Using Lib Baileys Multi Device",
   "main": "riy.js",
